feat(tab-manager-markdown): add real-time markdown exporter with persistence extension
Add standalone sync client that connects to the Epicenter sync server
and exports tab-manager Y.Doc state to markdown files per device.

- Persistence extension follows the flat Extension contract ({exports, whenReady, destroy})
- Debounced writes (1s) with flush-on-shutdown for graceful cleanup
- Server gains zero-arg createServer() overload and dev-server.ts for tab-manager
- Fix missing @epicenter/tab-manager deps, tsconfig extends base

--- a/apps/tab-manager/package.json
+++ b/apps/tab-manager/package.json
@@ -3,6 +3,9 @@
 	"version": "0.0.1",
 	"type": "module",
 	"private": true,
+	"exports": {
+		"./workspace": "./src/lib/workspace.ts"
+	},
 	"scripts": {
 		"dev": "wxt",
 		"dev:firefox": "wxt -b firefox",
