--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,6 +8,7 @@
 	},
 	"license": "AGPL-3.0",
 	"scripts": {
+		"dev": "bun run --watch dev-server.ts",
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
@@ -22,6 +23,7 @@
 		"yjs": "^13.6.27"
 	},
 	"devDependencies": {
+		"@epicenter/tab-manager": "workspace:*",
 		"@types/bun": "catalog:",
 		"arktype": "catalog:",
 		"typescript": "catalog:"
