test(server): add sync plugin integration tests
Real WebSocket integration tests using createSyncServer + createSyncProvider
over actual connections. Covers two-client sync, bidirectional merge, late
joiner, room isolation, hasLocalChanges tracking, and auth reject/accept.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,6 +24,7 @@
 		"yjs": "^13.6.27"
 	},
 	"devDependencies": {
+		"@epicenter/sync": "workspace:*",
 		"@types/bun": "catalog:",
 		"arktype": "catalog:",
 		"typescript": "catalog:"
