chore(deps): hoist yjs ecosystem to bun workspace catalog
Add yjs, lib0, y-protocols, y-indexeddb to root catalog at latest
versions and update all 9 consumer packages to use catalog: references.
Ensures singleton resolution across the monorepo.

--- a/apps/epicenter/package.json
+++ b/apps/epicenter/package.json
@@ -29,7 +29,7 @@
 		"svelte-sonner": "catalog:",
 		"tailwind-variants": "catalog:",
 		"wellcrafted": "catalog:",
-		"yjs": "^13.6.27"
+		"yjs": "catalog:"
 	},
 	"devDependencies": {
 		"@epicenter/config": "workspace:*",
