--- a/apps/tab-manager/package.json
+++ b/apps/tab-manager/package.json
@@ -23,8 +23,8 @@
 		"tailwind-merge": "catalog:",
 		"virtua": "^0.48.5",
 		"wellcrafted": "catalog:",
-		"y-indexeddb": "^9.0.12",
-		"yjs": "^13.6.27"
+		"y-indexeddb": "catalog:",
+		"yjs": "catalog:"
 	},
 	"devDependencies": {
 		"wxt": "^0.20.8",
