--- a/packages/filesystem/package.json
+++ b/packages/filesystem/package.json
@@ -20,7 +20,7 @@
 		"wellcrafted": "catalog:"
 	},
 	"peerDependencies": {
-		"yjs": "^13.6.27"
+		"yjs": "catalog:"
 	},
 	"devDependencies": {
 		"@types/bun": "catalog:",
