--- a/package.json
+++ b/package.json
@@ -51,7 +51,11 @@
 			"yargs": "^18.0.0",
 			"@standard-schema/spec": "^1.1.0",
 			"hono": "^4.10.7",
-			"mime": "^4.0.6"
+			"mime": "^4.0.6",
+			"yjs": "^13.6.29",
+			"lib0": "^0.2.117",
+			"y-protocols": "^1.0.7",
+			"y-indexeddb": "^9.0.12"
 		}
 	},
 	"packageManager": "bun@1.3.3",
