rename(server): rename dev script to start
The script boots the sync server regardless of environment — 'dev' implied development-only.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,7 +10,7 @@
 	},
 	"license": "AGPL-3.0",
 	"scripts": {
-		"dev": "bun src/start.ts",
+		"start": "bun src/start.ts",
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
