--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,8 @@
 	"exports": {
 		".": "./src/index.ts",
 		"./sync": "./src/sync/index.ts",
-		"./workspace": "./src/workspace/index.ts"
+		"./workspace": "./src/workspace/index.ts",
+		"./ai": "./src/ai/index.ts"
 	},
 	"license": "AGPL-3.0",
 	"scripts": {
@@ -15,6 +16,12 @@
 	},
 	"dependencies": {
 		"@elysiajs/openapi": "^1.4.11",
+		"@tanstack/ai": "^0.5.1",
+		"@tanstack/ai-anthropic": "^0.5.0",
+		"@tanstack/ai-gemini": "^0.5.0",
+		"@tanstack/ai-grok": "^0.5.0",
+		"@tanstack/ai-ollama": "^0.5.0",
+		"@tanstack/ai-openai": "^0.5.0",
 		"elysia": "^1.2.25",
 		"lib0": "catalog:",
 		"wellcrafted": "catalog:",
