--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
 	"license": "AGPL-3.0",
 	"scripts": {
 		"start": "bun src/start.ts",
+		"dev": "bun src/start.ts",
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
