--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"@epicenter/hq": "workspace:*",
+		"@epicenter/server": "workspace:*",
 		"wellcrafted": "catalog:",
 		"yargs": "catalog:"
 	},
