build(tab-manager): add @tanstack/ai-svelte dependencies

--- a/apps/tab-manager/package.json
+++ b/apps/tab-manager/package.json
@@ -20,6 +20,8 @@
 		"@epicenter/hq": "workspace:*",
 		"@epicenter/ui": "workspace:*",
 		"@lucide/svelte": "catalog:",
+		"@tanstack/ai": "^0.5.1",
+		"@tanstack/ai-svelte": "^0.5.4",
 		"@wxt-dev/storage": "^1.2.6",
 		"arktype": "catalog:",
 		"clsx": "catalog:",
