build(server): add better-auth and @elysiajs/cors, remove @tanstack/ai-ollama
better-auth: session-based auth with Bearer token support for the hub.
@elysiajs/cors: origin allowlisting for the sidecar.
Ollama removed: local LLM support deferred — all providers now require API keys.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,7 +7,11 @@
 		".": "./src/index.ts",
 		"./sync": "./src/sync/index.ts",
 		"./workspace": "./src/workspace/index.ts",
-		"./ai": "./src/ai/index.ts"
+		"./ai": "./src/ai/index.ts",
+		"./auth": "./src/auth/index.ts",
+		"./keys": "./src/keys/index.ts",
+		"./discovery": "./src/discovery/index.ts",
+		"./proxy": "./src/proxy/index.ts"
 	},
 	"license": "AGPL-3.0",
 	"scripts": {
@@ -16,13 +20,14 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@elysiajs/cors": "^1.4.1",
 		"@elysiajs/openapi": "^1.4.11",
 		"@tanstack/ai": "^0.5.1",
 		"@tanstack/ai-anthropic": "^0.5.0",
 		"@tanstack/ai-gemini": "^0.5.0",
 		"@tanstack/ai-grok": "^0.5.0",
-		"@tanstack/ai-ollama": "^0.5.0",
 		"@tanstack/ai-openai": "^0.5.0",
+		"better-auth": "^1.4.19",
 		"elysia": "^1.2.25",
 		"lib0": "catalog:",
 		"wellcrafted": "catalog:",
