feat(server/opencode): add OpenCode config generator and XDG-isolated spawner
Generates OPENCODE_CONFIG_CONTENT with provider baseURLs pointing to hub proxy, session token as apiKey. XDG-isolated process manager with start/stop/restart/updateConfig. Deferred: Tauri lifecycle wiring and plugin sync.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,8 @@
 		"./auth": "./src/auth/index.ts",
 		"./keys": "./src/keys/index.ts",
 		"./discovery": "./src/discovery/index.ts",
-		"./proxy": "./src/proxy/index.ts"
+		"./proxy": "./src/proxy/index.ts",
+		"./opencode": "./src/opencode/index.ts"
 	},
 	"license": "AGPL-3.0",
 	"scripts": {
